fixed resources alignment

--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ p{
 #resourcesBody{
 	position: absolute;
 	top: 180px;
-	left: 200px;
+	left: 50px;
 }
 
 #resourcesPhoto{
@@ -287,7 +287,7 @@ p{
 
 .insta{
  	width: 1000px;
- 	left : -200px;
+ 	left : 0px;
 }
 
 .resourcesP{
